# MIEX-Python

./: .gitignore  .gitlab-ci.yml  README.md  example1.input  example2.input  miex.py  miex_app.py  miex_example.py  miex_notebook.ipynb  miex_notebook_1.ipynb  miex_notebook_2.ipynb  pyproject.toml  requirements.txt  run_miex.py  test_miex.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
miex/: __init__.py  miex.py
ri-data/: dsharp  grap-par  grap-per  silicate  waterice
src/: miex.py
src/miex/: miex.py
